<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".fragments.social_media_display">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_weight="5"
        android:contentDescription="@string/app_name"
        android:padding="2sp"
        android:src="@drawable/rightupgaze"
        android:translationZ="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <ImageView
        android:id="@+id/TextEntryLeftUpImage"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_weight="5"
        android:contentDescription="@string/app_name"
        android:padding="2sp"
        android:src="@drawable/leftupgaze"
        android:translationZ="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/socialMediaTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="5dp"
        android:text="@string/SocialMedia_Title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/ic_launcher_background"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/socialMediaCameraText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/sunset_orange"
        android:textSize="50sp"
        android:textStyle="bold"
        android:translationZ="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716"
        app:layout_constraintWidth_percent="0.1"
        tools:text="3" />

    <TextView
        android:id="@+id/socialMediaText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/text_rounded_dark"
        android:fontFamily="sans-serif-medium"
        android:padding="10sp"
        android:textAllCaps="false"
        android:textColor="@color/columbia_blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623"
        app:layout_constraintWidth_percent="0.45"
        tools:text="Tweet Text: This is the user inputted text." />

    <TextView
        android:id="@+id/socialMediaUsernameText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/text_rounded_green"
        android:fontFamily="sans-serif-medium"
        android:padding="7sp"
        android:text=""
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/ic_launcher_background"

        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256"
        app:layout_constraintWidth_percent="0.45" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_weight="5"
        android:contentDescription="@string/app_name"
        android:padding="2sp"
        android:src="@drawable/upgaze"
        android:translationZ="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_weight="5"
        android:contentDescription="@string/app_name"
        android:padding="2sp"
        android:src="@drawable/closedgaze"
        android:translationZ="5dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="5"
        android:contentDescription="@string/app_name"
        android:padding="2sp"
        android:src="@drawable/leftgaze"
        android:translationZ="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932" />

    <TextView
        android:id="@+id/socialMediaTakePictureButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gaze_option_bg_2"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:text="CAMERA"
        android:textAlignment="textEnd"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        app:layout_constraintWidth_percent="0.33" />

    <TextView
        android:id="@+id/socialMediaGenerateImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gaze_option_bg_2"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:text="GENERATE"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93"
        app:layout_constraintWidth_percent="0.25" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="5"
        android:contentDescription="@string/app_name"
        android:padding="2sp"
        android:src="@drawable/rightgaze"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

    <TextView
        android:id="@+id/socialMediaDeleteTextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gaze_option_bg_2"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:text="@string/SocialMedia_DeleteText"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"

        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        app:layout_constraintWidth_percent="0.33" />

    <TextView
        android:id="@+id/socialMediaRefineTextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gaze_option_bg_2"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:text="REFINE"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        app:layout_constraintWidth_percent="0.21" />

    <ImageView
        android:id="@+id/socialMediaImage"
        android:layout_width="338dp"
        android:layout_height="170dp"
        android:background="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/socialMediaUploadButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gaze_option_bg_1"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:text="@string/SocialMedia_UploadButton"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"

        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:layout_constraintWidth_percent="0.26" />

    <TextView
        android:id="@+id/socialMediaBackButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gaze_option_bg_1"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:text="@string/SocialMedia_BackButton"
        android:textAlignment="textEnd"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:layout_constraintWidth_percent="0.21"
        tools:text="BACK" />

</androidx.constraintlayout.widget.ConstraintLayout>